Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22772

ListView items incorrectly positioned when inserting with a non-zero cacheBuffer

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.0.0
    • 5.0.0
    • None
    • Ubuntu 11.04
      Qt5 aee584d966bfc3251db52eb182fac76492e4308c
    • d2d4024afb4e7a93c0d09e474f73ad274e23d78a

      There's an issue with positioning of the ListView items when ListView.cacheBuffer has been set to a non-zero value. To see the issue launch the attached QML-file with qmlscene. Do the following steps:

      • Click the button repeatedly to insert items to the model until all the items don't fit into the listview.
      • Pan/flick the listview down so that the top-most item of the list view is out of the view and the bottom-most list item is inside the view.
      • Press the button one or more times to insert items (to the top of the list that is now outside the view).
      • Pan/flick the listview up to see the top of of the list.
      • At this point it should be possible see the problem with positioning of the listview items (see the attached pictures one_item_inserted.png/two_items_inserted.png).
      • Press the button one or more times to insert items (to the top of the list that is now inside the view).
      • At this point it should be possible to see from the listview item numbers that the items that were inserted while the top of the list was out of the view are not seen while the newly inserted items are correctly positioned (see the attached picture scrolled_up_and_inserted_two_items.png).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bealam Bea Lam (closed Nokia identity) (Inactive)
            suistoma Jussi Suistomaa
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes